snapshots/syntax/library/functions/file/curdir/curdir_with_whitespace.snap
---
source: src/syntax/library/functions/file/curdir.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: path
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: CurDir
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Whitespace
                  text: " "
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
